# QML-UI

./: README.md
testla/: CMakeLists.txt  main.cpp
testla/Controllers/: audioontroller.cpp  audioontroller.h  hvachandler.cpp  hvachandler.h  system.cpp  system.h
testla/UI/BottomBar/: BottomBar.qml
testla/UI/RightScreen/: navigationSearchBox.qml
